<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rom_fragment_layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/rom_fragment_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/rom_fragment_romName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/unknown_rom"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/rom_fragment_romAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rom_fragment_romName"
            android:layout_below="@+id/rom_fragment_romName"
            android:layout_marginLeft="1dp"
            android:text="@string/unknown_author"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />

        <RelativeLayout
            android:id="@+id/imagepack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rom_fragment_romAuthor"
            android:layout_marginTop="20dp" >

            <View
                android:id="@+id/strut"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:id="@+id/rom_fragment_image1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_toLeftOf="@id/strut"
                android:contentDescription="null" />

            <ImageView
                android:id="@+id/rom_fragment_image2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_toRightOf="@id/strut"
                android:contentDescription="null" />
        </RelativeLayout>

        <TextView
            android:id="@+id/rom_fragment_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/imagepack"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_card"
            android:text="@string/unknown_desc"
            android:textColor="#000000" />

        <Button
            android:id="@+id/rom_fragment_visitthread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rom_fragment_desc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/visit_thread" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rom_fragment_visitthread"
            android:background="#ffffff" />

        <Button
            android:id="@+id/rom_fragment_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rom_fragment_visitthread"
            android:layout_below="@id/rom_fragment_visitthread"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="40dp"
            android:text="@string/download" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rom_fragment_download"
            android:background="#ffffff" />
    </RelativeLayout>

</ScrollView>
